[tool.poetry]
name = "insights-functions"
version = "0.1.0"
description = ""
authors = ["jcbang <justin.c.bang@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
google-cloud = "^0.34.0"
google-cloud-vision = "^2.0.0"
google-cloud-firestore = "^1.9.0"
google-cloud-speech = "^2.0.0"
grpcio = "^1.32.0"
google-cloud-language = "^1.3.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
